--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,9 +1,22 @@
 body {
-	background-image: url('../stranger.png'); 
-	font-family: 'Trirong', serif;
+	background-image: url('../darkwoods.jpg');
+	font-family: 'Francois One', sans-serif;
 	background-repeat: no-repeat;
-	background-size: cover;
+	background-position: center center;
+	background-attachment: fixed;
+	min-height: 100%;
+	display: flex;
+	flex-direction: column;
 	color: #ccc;
+
+	/*Parallax css*/
+	overflow-y: scroll;
+	overflow-x: hidden;
+	margin:0;
+	padding:0;
+	perspective: 1px;
+	transform-style: preserve-3d;
+
 }
 button {
 	background-color: red;
@@ -16,3 +29,74 @@ p {
 	margin: 0;
 	padding: 5px;
 }
+
+html {
+	height: 100%;
+	overflow: hidden;
+}
+
+
+#header {
+	background-color: rgba(0,0,0,0.7);
+	color: white;
+	font-family: 'PT Sans', sans-serif;
+}
+
+
+.content {
+	flex: 1;
+}
+
+#crimes-logo {
+
+}
+
+ul {
+	list-style-type: none;
+}
+
+li {
+	font-family: 'Coming Soon', cursive;
+	margin: 0;
+}
+
+img {
+	margin: auto;
+}
+
+#login {
+	color: white !important;
+	font-family: 'PT Sans', sans-serif;
+	font-size: medium;
+	text-shadow: 2px 2px black;
+}
+
+a {
+	color: white;
+}
+
+#aboutSite {
+	color: white;
+	font-family: 'PT Sans', sans-serif;
+	font-size: x-large;
+	text-shadow: 2px 2px black;
+
+}
+
+
+.footer {
+	background-color: rgba(0,0,0,0.7);
+	color: white;
+	font-family: 'PT Sans', sans-serif;
+}
+/*}*/
+/*!*.wrap {*!*/
+/*!*background-color: #000;*!*/
+/*!*color: #fff;*!*/
+/*!*margin: auto;*!*/
+/*!*width: 350px;*!*/
+/*!*height: auto;*!*/
+/*!*border-style: ridge;*!*/
+/*!*border-color: #b9524d;*!*/
+/*!*border-width: 10px;*!*/
+/*}*/
