--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,20 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-		<link href="https://fonts.googleapis.com/css?family=Trirong" rel="stylesheet">
-		<link rel="stylesheet" href="/assets/css/style.css" type="text/css"/>
-		<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>		
-		<title>Stranger Crimes</title>
-	</head>
-	<body class="text-center">
-			<p>
-			{{#unless logged_in}}
-				<a href="/users/sign-in">Sign In</a>
-				<a href="/users/new">Sign Up</a>
-			{{/unless}}
-		</p>
-		{{{ body }}}
-	</body>
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Francois+One|Coming+Soon" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/css/style.css" type="text/css"/>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|PT+Sans|Raleway" rel="stylesheet">
+    <title>Eat-Da-Burger</title>
+</head>
+<body class="text-center content">
+
+<header id="header" class="header">
+    <p id="login">
+        {{#unless logged_in}}
+            <a href="/users/sign-in">Sign In</a>
+            |
+            <a href="/users/new">Sign Up</a>
+        {{/unless}}
+
+        {{#if logged_in}}
+            Welcome {{email}}! <br>
+            You are user {{user_id}}.<br>
+            <a href="/users/sign-out">Sign Out</a>
+        {{/if}}
+    </p>
+</header>
+
+{{{ body }}}
+</body>
 </HTML>
