--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Francois+One|Coming+Soon" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/style.css" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|PT+Sans|Raleway" rel="stylesheet">
-    <title>Eat-Da-Burger</title>
+    <title>Stranger Crimes</title>
 </head>
 <body class="text-center content">
 
