--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Francois+One|Coming+Soon" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/css/style.css" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|PT+Sans|Raleway" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="/assets/css/style.css" type="text/css"/> -->
+    <link href="/assets/css/main.css" rel="stylesheet">
     <title>Stranger Crimes</title>
 </head>
 <body class="text-center content">
