--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|PT+Sans|Raleway" rel="stylesheet">
     <!-- <link rel="stylesheet" href="/assets/css/style.css" type="text/css"/> -->
     <link href="/assets/css/main.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <title>Stranger Crimes</title>
 </head>
 <body class="text-center content">
