--- a/views/burgers/index.handlebars
+++ b/views/burgers/index.handlebars
@@ -82,7 +82,21 @@
     </ul>
 </div>
 
-</div>
+<footer class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <p> Stranger Crimes Copyright 2016</p>
+            </div>
+            <div class="col-md-4">
+                <a href="#"> Contact Us </a>
+            </div>
+            <div class="col-md-4">
+                <a href="#"> Please Donate </a>
+            </div>
+        </div>
+    </div>
+</footer>
 
 
 {{#if logged_in}}
