--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,21 +1,26 @@
+html {
+	height: 100%;
+	overflow: hidden;
+}
+
 body {
 	background-image: url('../darkwoods.jpg');
 	font-family: 'Francois One', sans-serif;
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-attachment: fixed;
-	min-height: 100%;
-	display: flex;
-	flex-direction: column;
+	/*min-height: 100%;*/
+	/*display: flex;*/
+	/*flex-direction: column;*/
 	color: #ccc;
 
-	/*Parallax css*/
-	overflow-y: scroll;
-	overflow-x: hidden;
-	margin:0;
-	padding:0;
-	perspective: 1px;
-	transform-style: preserve-3d;
+	/*!*Parallax css*!*/
+	/*overflow-y: scroll;*/
+	/*overflow-x: hidden;*/
+	/*margin:0;*/
+	/*padding:0;*/
+	/*perspective: 1px;*/
+	/*transform-style: preserve-3d;*/
 
 }
 button {
