--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,13 @@
     <!-- <link rel="stylesheet" href="/assets/css/style.css" type="text/css"/> -->
     <link href="/assets/css/main.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <title>Stranger Crimes</title>
+
+    <!--SEO Additions-->
+    <link rel="icon" href="../../public/assets/favicon2.jpg" type="image/x-icon">
+    <meta property="og:description" content="Stranger Crimes is a crowd-sourcing solution to solving cold cases. Join the biggest collection of cold cases and participate in a community that's committed to understanding, researching and solving crimes.">
+    <meta name="description" content="Stranger Crimes is a crowd-sourcing solution to solving cold cases. Join the biggest collection of cold cases and participate in a community that's committed to understanding, researching and solving crimes.">
+    <title>Stranger Crimes: Crowd-sourcing crime solutions for murders, disappearances, kidnapping, UFOs, supernatural events, and much more.  </title>
+
 </head>
 <body class="text-center content">
 
