--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 
     <!--SEO Additions-->
-    <link rel="icon" href="../../public/assets/favicon2.jpg" type="image/x-icon">
+    <link rel="icon" href="../../public/assets/favicon2.ico" type="image/x-icon">
     <meta property="og:description" content="Stranger Crimes is a crowd-sourcing solution to solving cold cases. Join the biggest collection of cold cases and participate in a community that's committed to understanding, researching and solving crimes.">
     <meta name="description" content="Stranger Crimes is a crowd-sourcing solution to solving cold cases. Join the biggest collection of cold cases and participate in a community that's committed to understanding, researching and solving crimes.">
     <title>Stranger Crimes: Crowd-sourcing crime solutions for murders, disappearances, kidnapping, UFOs, supernatural events, and much more.  </title>
