--- a/views/users/new.handlebars
+++ b/views/users/new.handlebars
@@ -14,5 +14,5 @@
     <input type="password" id="pass" name="password">
   </div>
 
-  <button type="submit">Sign Up!</button>
+  <button type="submit" class="btn btn-danger">Sign Up!</button>
 </form>
