--- a/views/users/sign_in.handlebars
+++ b/views/users/sign_in.handlebars
@@ -12,5 +12,5 @@ views/users/sign_in.handlebars -->
     <input type="password" id="pass" name="password">
   </div>
 
-  <button type="submit">Sign In</button>
+  <button type="submit" class="btn btn-danger">Sign In</button>
 </form>
