--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2,12 +2,15 @@
 
            
 body {
-  	background-color: #ffffff;
-  	font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
-    font-size: 14px;
-    color: #555;
-
+	background-image: url('../darkwoods.jpg');
+	font-family: 'Francois One', sans-serif;
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-attachment: fixed;
+	min-height: 100%;
+	display: flex;
+	flex-direction: column;
+	color: #555;
     -webkit-font-smoothing: antialiased;
     -webkit-overflow-scrolling: touch;
 }
