--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,48 +1,29 @@
-html {
-	height: 100%;
-	/*overflow: hidden;*/
-}
-
 body {
-	background-image: url('../darkwoods.jpg');
-	font-family: 'Francois One', sans-serif;
-	background-repeat: no-repeat;
-	background-position: center center;
-	background-attachment: fixed;
-	height: 100%;
-	/*display: flex;*/
-	flex-direction: column;
-	color: #ccc;
-
-	/*!*!*Parallax css*!*!*/
-	/*!*overflow-y: scroll;*!*/
-	/*!*overflow-x: hidden;*!*/
-	/*!*margin:0;*!*/
-	/*!*padding:0;*!*/
-	/*!*perspective: 1px;*!*/
-	/*!*transform-style: preserve-3d;*!*/
-
+    background-image: url('../images/darkwoods.jpg');
+    font-family: 'Francois One', sans-serif;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+    color: #555;
+    -webkit-font-smoothing: antialiased;
+    -webkit-overflow-scrolling: touch;
 }
 
-
-.wrap {
-	min-height: 100%;
-	height: auto;
-
+p, h2, h3 {
+	color: #000;
 }
 
-button {
-	background-color: red;
-}
 
 .row {
 	margin: 0;
 	padding: 5px;
 }
 
-/*html {*/
-	/*height: 100%;*/
-	/*overflow: hidden;*/
+html {
+	height: 100%;
 }
 
 
@@ -53,12 +34,17 @@ button {
 }
 
 
-/*.content {*/
-	/*flex: 1;*/
-/*}*/
+.content {
+	flex: 1;
+}
 
-#crimes-logo {
+.logo {
+    height: 30%;
+    width: 30%;
+}
 
+.article {
+    height: 250px;
 }
 
 ul {
@@ -71,7 +57,13 @@ li {
 }
 
 img {
-	margin: auto;
+	margin: 10px auto;
+}
+
+#thumbimg {
+    height: 170px; 
+    width: 150px; 
+    display: block;
 }
 
 #login {
@@ -85,11 +77,6 @@ a {
 	color: white;
 }
 
-.login-prompt {
-	color: white;
-	text-shadow: 2px 2px black;
-	font-family: 'PT Sans', sans-serif;
-}
 
 #aboutSite {
 	color: white;
@@ -99,18 +86,128 @@ a {
 
 }
 
-#jumbotron1 {
-	background-color: transparent;
+/* Paragraph & Typographic */
+p {
+    line-height: 28px;
+    margin-bottom: 25px;
+    font-size: 16px;
 }
 
-#jumbotron2 {
-	background-color: rgba(0,0,0,0.7);
+.centered {
+    text-align: center;
+}
+
+/* Links */
+a {
+    color: #BLACK;
+    word-wrap: break-word;
+
+    -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
+    -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
+    -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
+    -o-transition: color 0.1s ease-in, background 0.1s ease-in;
+    transition: color 0.1s ease-in, background 0.1s ease-in;
+}
+
+a:hover,
+a:focus {
+    color: #7b7b7b;
+    text-decoration: none;
+    outline: 0;
+}
+
+a:before,
+a:after {
+    -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
+    -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
+    -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
+    -o-transition: color 0.1s ease-in, background 0.1s ease-in;
+    transition: color 0.1s ease-in, background 0.1s ease-in;
+}
+
+ hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin: 1em 0;
+    padding: 0;
+}
+
+
+.navbar {
+    text-transform: uppercase;
+    margin-bottom: 0px;
+}
+
+.navbar-inverse {
+    padding-bottom: 10px;
+    padding-top: 10px;
+}
+
+.navbar-inverse {
+    background-color: rgba(0,0,0,0.7);
+    border-color: #000;
+}
+
+.navbar-inverse .navbar-nav > li > a {
+    color: white;
+}
+
+.navbar-inverse .navbar-nav > li > a:hover {
+    color: #222222;
+}
+
+.navbar-brand {
+    font-weight: 700;
+    font-size: 20px;
+    letter-spacing: 2px;
+}
+
+.navbar-inverse .navbar-brand {
+    color: white;
+}
+
+.navbar-inverse .navbar-toggle {
+    border-color: transparent;
+}
+
+
+/* Helpers */
+
+.mt {
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+.pt {
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+
+/* +++++ WRAP SECTIONS +++++ */
+
+#ww {
+    padding-top: 70px;
+    padding-bottom: 70px;
+    background-color: #ffffff;
 
 }
 
 
-.footer {
-	background-color: rgba(0,0,0,0.7);
-	color: white;
-	font-family: 'PT Sans', sans-serif;
+#footer {
+    background-color: #ffffff;
+    padding-top: 50px;
+    padding-bottom: 50px; 
+}
+
+#footer p {
+    color: white;
+}
+
+#footer h4 {
+    color: white;
+    text-transform: uppercase;
+    padding-bottom: 20px;
 }
