front end updates

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,15 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans|PT+Sans|Raleway" rel="stylesheet">
 		<link rel="stylesheet" href="/assets/css/style.css" type="text/css"/>	
-		<title>Stranger Crimes</title>
+
+
+        <!--SEO Features-->
+        <title>Stranger Crimes: A crowd-sourcing solution to solving cold cases </title>
+        <meta property="og:description" content="Stranger Crimes is a community decicated to theorizing,
+        conspirasizing and solving the strangest crimes and cold cases. Sign up, contribute your theories and solve a case today.">
+        <meta name="description" content="Stranger Crimes is a community decicated to theorizing, conspirasizing
+        and solving the strangest crimes and cold cases. Sign up, contribute your theories and solve a case today.">
+
 	</head>
 	<body class="text-center">
 	<header id="header" class="header">	
