--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -52,7 +52,7 @@ ul {
 }
 
 li {
-	font-family: 'Coming Soon', cursive;
+    font-family: 'PT Sans', sans-serif;
 	margin: 0;
 }
 
@@ -138,6 +138,7 @@ a:after {
 .navbar {
     text-transform: uppercase;
     margin-bottom: 0px;
+    font-family: 'PT Sans', sans-serif;
 }
 
 .navbar-inverse {
@@ -162,6 +163,7 @@ a:after {
     font-weight: 700;
     font-size: 20px;
     letter-spacing: 2px;
+    font-family: 'PT Sans', sans-serif;
 }
 
 .navbar-inverse .navbar-brand {
@@ -197,7 +199,7 @@ a:after {
 
 
 #footer {
-    background-color: #ffffff;
+    background-color: rgba(0,0,0,0.4);
     padding-top: 50px;
     padding-bottom: 50px; 
 }
