added more crimes

--- a/views/cases/index.handlebars
+++ b/views/cases/index.handlebars
@@ -31,7 +31,7 @@
           {{/each}}
         </ul>      
           <form class="create-update-form" action="/addnote" method="POST">
-          <div class="form-group">
+          <div class="form-group comments">
             <input type="hidden" name="cid" value="{{crime.id}}" >           
             <label for="note">Add a note:</label>
             <input type="text" id="note" name="name">           
