--- a/views/users/index.handlebars
+++ b/views/users/index.handlebars
@@ -2,7 +2,7 @@
       <div class="container">
       <div class="row">
         {{#each favorite}}
-        <div class="col-lg-6 col-lg centered">
+        <div class="col-lg-4">
         <h4>Working Cases</h4>
         <h3>{{this.fave_name}}</h3>
         <p><a href="/readmore/{{this.fave_name}}"><button class="btn btn-primary">Read More</button></a></p>
